<resources>
    <string name="app_name">Weather</string>

    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="visibility">Visibility</string>
    <string name="hint_search_city">Enter city name</string>

    <string name="generic_exception">Something went wrong. Please try again.</string>
    <string name="location_timeout">Could not get current location. Please search your city manually.</string>
    <string name="permission_location_denied">Location permission denied. Please search your city manually.</string>
    <string name="fetching_location">Fetching location…</string>
    <string name="fetching_weather">Fetching weather details…</string>

    <string name="cityName">%1$s, %2$s</string>
    <string name="date">%1$s UTC</string>
    <string name="temperature">%1$d \u2103</string>
    <string name="temperatureMinMax">Max %1$d\u00B0\u2191 \u2022 Min %2$d\u00B0\u2193</string>
    <string name="windSpeed">%1$s m/s %2$s</string>
    <string name="gustSpeed">%1$s m/s</string>
    <string name="humidityLevel">%1$s \%</string>
    <string name="pressureLevel">%1$s hPa</string>
    <string name="visibilityLevel">%1$s kms</string>

    <string name="symbolNorth">\u2191</string>
    <string name="symbolNorthEast">\u2197</string>
    <string name="symbolEast">\u2192</string>
    <string name="symbolSouthEast">\u2198</string>
    <string name="symbolSouth">\u2193</string>
    <string name="symbolSouthWest">\u2199</string>
    <string name="symbolWest">\u2190</string>
    <string name="symbolNorthWest">\u2196</string>

    <string name="weather_clear_day">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_thunder_rain">&#xf01d;</string>
    <string name="weather_thunder_storm">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="weather_rain">&#xf019;</string>
    <string name="weather_rain_mix">&#xf017;</string>
    <string name="weather_shower">&#xf01a;</string>
    <string name="weather_snow">&#xf01b;</string>
    <string name="weather_sleet">&#xf0b5;</string>
    <string name="weather_mist">&#xf014;</string>
    <string name="weather_smoke">&#xf062;</string>
    <string name="weather_dust">&#xf063;</string>
    <string name="weather_winds">&#xf050;</string>
    <string name="weather_tornado">&#xf056;</string>
    <string name="weather_clouds">&#xf013;</string>
    <string name="weather_hurricane">&#xf073;</string>
    <string name="weather_cold">&#xf053;</string>
    <string name="weather_hot">&#xf055;</string>
    <string name="weather_hail">&#xf015;</string>
</resources>
