<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <RelativeLayout
            android:id="@+id/search_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:layout_marginTop="-4dp"
            android:background="@drawable/search_bg">

            <com.balysv.materialmenu.ps.MaterialMenuView
                android:id="@id/searchLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_view"
                app:mm_color="@color/colorMenu"
                app:mm_strokeWidth="2"
                app:mm_transformDuration="500" />

            <EditText
                android:id="@id/searchBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/searchLogo"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="@dimen/margin_horizontal_search"
                android:layout_marginStart="@dimen/margin_horizontal_search"
                android:background="@null"
                android:ems="10"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/colorText"
                android:visibility="gone">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@id/searchHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/searchLogo"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_horizontal_search"
                android:layout_marginStart="@dimen/margin_horizontal_search"
                android:ems="10"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/hint_search_city"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorText" />

            <ImageView
                android:id="@id/searchClear"
                android:layout_width="@dimen/height_width_clear"
                android:layout_height="@dimen/height_width_clear"
                android:layout_alignBottom="@id/searchLogo"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignWithParentIfMissing="true"
                android:layout_marginEnd="@dimen/margin_end_clear"
                android:src="@drawable/ic_clear"
                android:visibility="gone" />

        </RelativeLayout>

        <TextView
            android:id="@id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_large"
            android:layout_marginTop="@dimen/margin_view"
            android:textAllCaps="true"
            android:textSize="@dimen/size_text_standard"
            android:textStyle="bold"
            tools:text="abffdfbdsbfbfi" />

        <TextView
            android:id="@id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_large"
            android:layout_marginTop="@dimen/margin_view"
            android:textSize="@dimen/size_text_standard"
            tools:text="abffdfbdsbfbfi" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_large"
            android:layout_marginTop="@dimen/margin_view_double"
            android:gravity="center">

            <TextView
                android:id="@id/minMax"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_text_standard"
                tools:text="24" />

            <TextView
                android:id="@id/desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_text_standard"
                tools:text="ab" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_large"
            android:gravity="center_horizontal|top">

            <TextView
                android:id="@id/temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_text_very_large"
                tools:text="24" />

            <TextView
                android:id="@id/weatherIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_text_very_large"
                android:textStyle="bold"
                tools:text="ab" />
        </LinearLayout>

        <TextView
            android:id="@id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_large"
            android:layout_marginTop="@dimen/margin_view"
            android:text="@string/wind"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@id/windSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_large"
            android:layout_marginTop="@dimen/margin_view"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_text_standard" />

        <TextView
            android:id="@id/gustSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_large"
            android:layout_marginTop="@dimen/margin_view"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_text_standard" />

        <TextView
            android:id="@id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_large"
            android:layout_marginTop="@dimen/margin_view_double"
            android:text="@string/humidity"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@id/humidityLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_view"
            android:layout_marginStart="@dimen/margin_left_large"
            android:layout_marginTop="@dimen/margin_view"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_text_standard" />

        <TextView
            android:id="@id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_large"
            android:layout_marginTop="@dimen/margin_view"
            android:text="@string/pressure"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@id/pressureLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_view"
            android:layout_marginStart="@dimen/margin_left_large"
            android:layout_marginTop="@dimen/margin_view"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_text_standard" />

        <TextView
            android:id="@id/visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_large"
            android:layout_marginTop="@dimen/margin_view"
            android:text="@string/visibility"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@id/visibilityLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_view"
            android:layout_marginStart="@dimen/margin_left_large"
            android:layout_marginTop="@dimen/margin_view"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_text_standard"
            android:visibility="gone" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>